add API to store service file
